--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,6 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "files.associations": {
     "get_next_line.h": "c"
-  }
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
